tests/snapshots/examples_fixtures/Modules__Main.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Main.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Main` doesn't match file path `examples/Modules/Main.flx`.

  --> examples/Modules/Main.flx:3:1
  |
3 | module Modules.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
